# Modelagem

./: .gitignore  Ex1-Walter.ipynb  OtimizacaoPortfolio.ipynb  PortOpt_ClassNotes_1.ipynb  PortOpt_ClassNotes_2.ipynb  README.md  pyproject.toml  requirements.txt  teste.ipynb
modelagem/: manage.py
modelagem/modelagem/: asgi.py  settings.py  urls.py  wsgi.py
src/credit/merton/: merton.py
src/modelagem/credito/: merton.py
src/modelagem/econometria/: var_basic.py
src/modelagem/juros/: hull_white1f.py
src/modelagem/liquidez/: lcr.py
src/modelagem/mercado/: curva_di.py
src/utils/: fs.py
tests/: test_merton.py
tests/credito/: test_merton.py
tests/econometria/: test_var_basic.py
tests/juros/: test_hw1f.py
tests/liquidez/: test_lcr.py
tests/mercado/: test_curva_di.py
